--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,216 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #f5f5f5;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Header styles */
+header {
+  padding: 15px 0;
+  position: absolute;
+  width: 100%;
+  z-index: 1000;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+/* Logo */
+
+.logo img {
+  height: 65px;
+  width: auto;
+}
+
+/* Navigation menu */
+nav ul {
+  display: flex;
+  list-style: none;
+}
+
+nav ul li {
+  margin: 0 15px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #f5f5f5;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+/* Social Icons */
+.social-icons a img {
+  height: 20px;
+  margin-left: 10px;
+  transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
+}
+
+.social-icons a:hover img {
+  transform: scale(1.2);
+  filter: brightness(1.3);
+}
+/* Banner section */
+.banner {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background: url("/public/img/banner.png") no-repeat center center/cover;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  text-align: left;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Overlay for better text visibility */
+.banner .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(16, 64, 153, 0.627);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Banner content */
+.banner .content {
+  position: relative;
+  z-index: 2;
+  top: 100px;
+  left: 150px;
 }
+
+.banner h2 {
+  font-size: 60px;
+  font-weight: bold;
+  left: 65px;
+  display: flex;
+  position: relative;
+}
+
+.banner h2 span {
+  color: #1abc9c;
+}
+
+h1 {
+  display: flex;
+  align-items: center;
+  font-size: 54px;
+  color: #ffffff;
+  text-align: center;
+}
+
+.name {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 3px solid #fff;
+  text-align: center;
+  width: 0;
+  animation: typing 3s steps(30, end) forwards, blink-cursor 0.75s infinite;
+}
+
+@keyframes typing {
+  from { width: 0; }
+  to { width: 47%; }
+}
+
+@keyframes blink-cursor {
+  50% { border-color: transparent; }
+}
+
+.banner h1 span {
+  color: #00af89;
+}
+
+h1::before {
+  content: "";
+  display: inline-block;
+  margin: 5px;
+  width: 50px;
+  height: 2px;
+  justify-content: center;
+  background-color: #00af89;
+  margin-right: 10px;
+}
+
+.banner p {
+  margin: 20px 8px;
+  width: 70%;
+  font-size: 20px;
+  line-height: 30px;
+  display: flex;
+  position: relative;
+  left: 65px;
+}
+
+/* Buttons */
+.buttons {
+  margin-top: 20px;
+  display: flex;
+  position: relative;
+  left: 65px;
+}
+
+.btn {
+  padding: 12px 20px;
+  font-size: 20px;
+  text-decoration: none;
+  display: inline-block;
+  margin: 10px;
+}
+
+.btn.primary {
+  position: relative;
+  overflow: hidden;
+  background-color: #00af89;
+  color: #ffffff;
+  box-shadow: 1px 1px 10px 1px rgba(34, 34, 34, 0.2);
+  height: 50px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  transition: color 0.4s ease-in-out;
+  z-index: 1;
+}
+
+.btn.primary::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -100%;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to right, #00af89 51%, #104099 100%);
+  transition: right 0.4s ease-in-out;
+  z-index: -1;
+}
+
+.btn.primary:hover::before {
+  right: 0;
+}
+
+.btn.primary:hover {
+  color: #ffffff;
+}
+
+.btn.secondary {
+  border: 2px solid white;
+  color: white;
+}
+
+.btn:hover {
+  opacity: 0.8;
+}
+
