--- a/src/App.css
+++ b/src/App.css
@@ -617,3 +617,106 @@ h1 .highlight {
   border-radius: 50%;
   border: 2px solid #009966;
 }
+
+
+/* Testimonial */
+
+
+.testimonials-container {
+  max-width: 1250px;
+  top: 50px;
+  position: relative;
+  margin: auto;
+  padding: 40px 20px;
+}
+
+.testimonials-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.testimonials-title {
+  font-size: 52px;
+  color: #104099;
+  font-weight: 500;
+}
+.testimonials-title span {
+  font-size: 52px;
+  color: #104099;
+  font-weight: bold;
+}
+
+.testimonials-title .highlight {
+  display: block; 
+  color: #104099;
+}
+
+.testimonials {
+  display: flex;
+  height: 230px;
+  justify-content: space-between;
+  transition: transform 0.5s ease-in-out;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.testimonial-card {
+  background:rgb(228, 231, 234);
+  padding: 20px;
+  width: 25%;
+  text-align: left;
+}
+
+.testimonial-card img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+.testimonials-name {
+  font-weight: bold;
+  color: #00af89;
+  position: relative;
+  top: -10px;
+}
+
+.role {
+  font-size: 14px;
+  color: gray;
+  position: relative;
+  left: 60px;
+  top: -25px;
+}
+
+.button {
+  background: #00af89;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  height: 50px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.pagination {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.pagination span {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background: rgb(228, 231, 234);
+  border-radius: 50%;
+  margin: 0 5px;
+}
+
+.pagination .active {
+  background: #00af89;
+}
+
